--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="svg.css" />
+
+    <style></style>
+
     <title>Welcom to Kokoa Talk</title>
   </head>
   <body>
-    <div id="status-bar">
+    <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
+
         <!-- To Do: Wifi icon -->
       </div>
       <div class="status-bar__column">
@@ -17,6 +24,9 @@
       </div>
       <div class="status-bar__column">
         <span>110%</span>
+
+        <object type="image/svg+xml" data="icons/batteryIcon.svg"></object>
+
         <!-- Battery Icon -->
         <!-- Lightning Icon -->
       </div>
