--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
-
-        <!-- To Do: Wifi icon -->
+        <object type="image/svg+xml" data="icons/wifi.svg"></object>
       </div>
       <div class="status-bar__column">
         <span>18:43</span>
@@ -26,9 +25,7 @@
         <span>110%</span>
 
         <object type="image/svg+xml" data="icons/batteryIcon.svg"></object>
-
-        <!-- Battery Icon -->
-        <!-- Lightning Icon -->
+        <object type="image/svg+xml" data="icons/bolt.svg"></object>
       </div>
     </div>
   </body>
