#6.4 Sign Up Screen part Two

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style></style>
 
-    <title>Welcom to Kokoa Talk</title>
+    <title>Welcom to Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,10 +23,21 @@
       </div>
       <div class="status-bar__column">
         <span>110%</span>
-
         <object type="image/svg+xml" data="icons/batteryIcon.svg"></object>
         <object type="image/svg+xml" data="icons/bolt.svg"></object>
       </div>
     </div>
+    <head class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        If you have Kokoa Account, log in with your email or phone number.
+      </p>
+    </head>
+    <form id="login-form">
+      <input type="text" placeholder="Email of phone number" />
+      <input type="password" placeholder="Password" />
+      <input type="submint" value="Log In" />
+      <a href="#">Find Kokoa Account of Password</a>
+    </form>
   </body>
 </html>
