#Sign Up Screen part Three

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <object type="image/svg+xml" data="icons/bolt.svg"></object>
       </div>
     </div>
-    <head class="welcome-header">
+    <header class="welcome-header">
       <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
       <p class="welcome-header__text">
         If you have Kokoa Account, log in with your email or phone number.
       </p>
-    </head>
+    </header>
     <form id="login-form">
       <input type="text" placeholder="Email of phone number" />
       <input type="password" placeholder="Password" />
