--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <form id="login-form">
       <input type="text" placeholder="Email of phone number" />
       <input type="password" placeholder="Password" />
-      <input type="submint" value="Log In" />
+      <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account of Password</a>
     </form>
   </body>
