friends.html-self try

--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,49 @@
-Hello! I'm your friend.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="css/style.css" />
+
+    <style></style>
+
+    <title>Welcom to Kokoa Clone</title>
+  </head>
+  <body>
+    <div class="status-bar">
+      <div class="status-bar__column">
+        <span>No Service</span>
+        <object type="image/svg+xml" data="icons/wifi.svg"></object>
+      </div>
+      <div class="status-bar__column">
+        <span>18:43</span>
+      </div>
+      <div class="status-bar__column">
+        <span>110%</span>
+        <object type="image/svg+xml" data="icons/batteryIcon.svg"></object>
+        <object type="image/svg+xml" data="icons/bolt.svg"></object>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-box">
+        <div class="footer-box__column">
+          <object data="icons/user.svg" type="image/svg+xml"></object>
+        </div>
+        <div class="footer-box__column">
+          <object
+            data="icons/KakaoTalk_bubble.svg"
+            type="image/svg+xml"
+          ></object>
+        </div>
+        <div class="footer-box__column">
+          <object data="icons/search.svg" type="image/svg+xml"></object>
+        </div>
+        <div class="footer-box__column">
+          <object data="icons/threeDots.svg" type="image/svg+xml"></object>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
