--- a/friends.html
+++ b/friends.html
@@ -26,24 +26,24 @@
         <object type="image/svg+xml" data="icons/bolt.svg"></object>
       </div>
     </div>
-    <footer>
-      <div class="footer-box">
-        <div class="footer-box__column">
+    <nav>
+      <ul class="footer-box">
+        <li class="footer-box__column">
           <object data="icons/user.svg" type="image/svg+xml"></object>
-        </div>
-        <div class="footer-box__column">
+        </li>
+        <li class="footer-box__column">
           <object
             data="icons/KakaoTalk_bubble.svg"
             type="image/svg+xml"
           ></object>
-        </div>
-        <div class="footer-box__column">
+        </li>
+        <li class="footer-box__column">
           <object data="icons/search.svg" type="image/svg+xml"></object>
-        </div>
-        <div class="footer-box__column">
+        </li>
+        <li class="footer-box__column">
           <object data="icons/threeDots.svg" type="image/svg+xml"></object>
-        </div>
-      </div>
-    </footer>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
