--- a/friends.html
+++ b/friends.html
@@ -29,19 +29,28 @@
     <nav>
       <ul class="footer-box">
         <li class="footer-box__column">
-          <object data="icons/user.svg" type="image/svg+xml"></object>
+          <a class="nav__link" href="#">
+            <object data="icons/user.svg" type="image/svg+xml"></object>
+          </a>
         </li>
         <li class="footer-box__column">
-          <object
-            data="icons/KakaoTalk_bubble.svg"
-            type="image/svg+xml"
-          ></object>
+          <a class="nav__link" href="#">
+            <span class="new-massage">1</span>
+            <object
+              data="icons/KakaoTalk_bubble.svg"
+              type="image/svg+xml"
+            ></object>
+          </a>
         </li>
         <li class="footer-box__column">
-          <object data="icons/search.svg" type="image/svg+xml"></object>
+          <a class="nav__link" href="#">
+            <object data="icons/search.svg" type="image/svg+xml"></object>
+          </a>
         </li>
         <li class="footer-box__column">
-          <object data="icons/threeDots.svg" type="image/svg+xml"></object>
+          <a class="nav__link" href="#">
+            <object data="icons/threeDots.svg" type="image/svg+xml"></object>
+          </a>
         </li>
       </ul>
     </nav>
