--- a/friends.html
+++ b/friends.html
@@ -49,6 +49,7 @@
         </li>
         <li class="footer-box__column">
           <a class="nav__link" href="#">
+            <div class="reddot"></div>
             <object data="icons/threeDots.svg" type="image/svg+xml"></object>
           </a>
         </li>
