#6.15 FriendsScreenpart One/FontAwosomeSVG control

--- a/friends.html
+++ b/friends.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="css/style.css" />
-
-    <style></style>
+    <script
+      src="https://kit.fontawesome.com/895172dce5.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Welcom to Kokoa Clone</title>
   </head>
@@ -41,6 +43,12 @@
         </span>
       </div>
     </header>
+
+    <a id="friends-display-link">
+      <object data="icons/infor.svg" type="image/svg+xml"></object>
+      <span>Friend's Names Display</span>
+      <i class="fa-solid fa-chevron-right fa-xs"></i>
+    </a>
 
     <nav class="nav">
       <!-- Navigation on footer position -->
