--- a/friends.html
+++ b/friends.html
@@ -43,13 +43,47 @@
         </span>
       </div>
     </header>
-
     <a id="friends-display-link">
       <object data="icons/infor.svg" type="image/svg+xml"></object>
       <span>Friend's Names Display</span>
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
-
+    <main class="friends-screen">
+      <div class="user-component">
+        <a href="#" class="user-info">
+          <img
+            src="icons/KakaoTalk_logo.svg"
+            class="user-component__avatar user-component__avatar__xl"
+          />
+          <div class="user-detail">
+            <span class="user-name">Nicolas</span>
+            <span class="user-subtitle">+1 787-493-4219</span>
+          </div>
+        </a>
+        <div class="user-component__right"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fa-solid fa-chevron-up fa-xs"></i>
+        </div>
+      </div>
+      <div class="user-component">
+        <a href="#" class="user-info">
+          <img
+            src="icons/KakaoTalk_logo.svg"
+            class="user-component__avatar user-component__avatar__sm"
+          />
+          <div class="user-detail">
+            <span class="user-name">Nicolas</span>
+          </div>
+        </a>
+        <div class="user-component__right">
+          <span>2</span>
+          <i class="fa-solid fa-chevron-right fa-xs"></i>
+        </div>
+      </div>
+    </main>
     <nav class="nav">
       <!-- Navigation on footer position -->
       <ul class="footer-box">
