#6.18 Finishing Friends Screen

--- a/friends.html
+++ b/friends.html
@@ -68,19 +68,19 @@
           <i class="fa-solid fa-chevron-up fa-xs"></i>
         </div>
       </div>
-      <div class="user-component">
+      <div class="user-component channel-component">
         <a href="#" class="user-info">
           <img
             src="icons/KakaoTalk_logo.svg"
             class="user-component__avatar user-component__avatar__sm"
           />
           <div class="user-detail">
-            <span class="user-name">Nicolas</span>
+            <span class="user-name channel-name">Channel</span>
           </div>
         </a>
         <div class="user-component__right">
           <span>2</span>
-          <i class="fa-solid fa-chevron-right fa-xs"></i>
+          <i class="fa-solid fa-chevron-right fa-xs count"></i>
         </div>
       </div>
     </main>
