#find- finish-self

--- a/find.html
+++ b/find.html
@@ -44,8 +44,6 @@
         </span>
       </div>
     </header>
-
-    <!-- Under onstruction from here!!!!!!! -->
     <nav class="nav-find">
       <ul class="nav-find-container">
         <li class="nav-find__column">
@@ -82,12 +80,60 @@
         </li>
       </ul>
     </nav>
-    <!-- Under onstruction to herer!!!!!!! -->
     <div class="recommended-friends">
       <span>Recommended Frieds</span>
       <div class="recommended-friends__block">
         <span>You have no recommended friends.</span>
       </div>
+    </div>
+    <div class="open-chat__container">
+      <div class="open-chat__header">
+        <span>Open Chat</span>
+        <div class="open-chat__right">
+          <span>Go to Openchat Home</span>
+          <i class="fa-solid fa-chevron-right fa-xs count"></i>
+        </div>
+      </div>
+      <ul class="open-chat__list">
+        <li class="open-chat__list__item">
+          <div class="open-chat__list__item__text">
+            <span>#BTS</span>
+            <span>#BTS#ARMY#FRIENDS</span>
+            <div class="open-chat__list__item__text__members">
+              <img src="image/app-icons-27.png" alt="" />
+              <span>802 members</span>
+              <span>|</span>
+              <span>Active</span>
+            </div>
+          </div>
+          <div class="open-chat__list__item__img">
+            <img src="image/bts-album.jpg" alt="" />
+            <div class="open-chat__list__item__like">
+              <i class="fa-solid fa-heart"></i>
+              <span>326</span>
+            </div>
+          </div>
+        </li>
+        <li class="open-chat__list__item">
+          <div class="open-chat__list__item__text">
+            <span>#Bts Gang~</span>
+            <span>#englishonly #ipurpleyou #jimin #taeta...</span>
+            <div class="open-chat__list__item__text__members">
+              <img src="image/app-icons-27.png" alt="" />
+              <span>299 members</span>
+              <span>|</span>
+              <span>Active</span>
+            </div>
+          </div>
+          <div class="open-chat__list__item__img">
+            <img src="image/app-icons-28.png" alt="" />
+            <div class="open-chat__list__item__like">
+              <i class="fa-solid fa-heart"></i>
+              <span>215</span>
+            </div>
+          </div>
+        </li>
+      </ul>
     </div>
     <nav class="nav">
       <ul class="footer-box">
