#settings-finish-self

--- a/find.html
+++ b/find.html
@@ -39,7 +39,9 @@
           <object data="icons/search.svg" type="image/svg+xml"></object>
         </span>
         <span>
-          <object data="icons/gear.svg" type="image/svg+xml"></object>
+          <a href="settings.html">
+            <object data="icons/gear.svg" type="image/svg+xml"></object
+          ></a>
           <div class="reddot"></div>
         </span>
       </div>
