--- a/chats.html
+++ b/chats.html
@@ -41,7 +41,9 @@
           <object data="icons/music.svg" type="image/svg+xml"></object>
         </span>
         <span>
-          <object data="icons/gear.svg" type="image/svg+xml"></object>
+          <a href="settings.html">
+            <object data="icons/gear.svg" type="image/svg+xml"></object
+          ></a>
         </span>
       </div>
     </header>
