start-chat-screen

--- a/chat.html
+++ b/chat.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Settings - Kokoa Clone</title>
+    <title>Chat with friends- Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -121,35 +121,5 @@
         </li>
       </ul>
     </section>
-
-    <nav class="nav">
-      <ul class="footer-box">
-        <li class="footer-box__column">
-          <a class="nav__link" href="friends.html">
-            <object data="icons/user.svg" type="image/svg+xml"></object>
-          </a>
-        </li>
-        <li class="footer-box__column">
-          <a class="nav__link" href="chats.html">
-            <span class="new-massage badge">1</span>
-            <object
-              data="icons/KakaoTalk_bubble__fill.svg"
-              type="image/svg+xml"
-            ></object>
-          </a>
-        </li>
-        <li class="footer-box__column">
-          <a class="nav__link" href="find.html">
-            <object data="icons/search.svg" type="image/svg+xml"></object>
-          </a>
-        </li>
-        <li class="footer-box__column">
-          <a class="nav__link" href="more.html">
-            <div class="reddot"></div>
-            <object data="icons/threeDots.svg" type="image/svg+xml"></object>
-          </a>
-        </li>
-      </ul>
-    </nav>
   </body>
 </html>
