--- a/chats.html
+++ b/chats.html
@@ -49,7 +49,7 @@
     </header>
     <main class="friends-screen">
       <div class="user-component chanell-component">
-        <a href="#" class="user-info">
+        <a href="chat.html" class="user-info">
           <img
             src="icons/KakaoTalk_logo.svg"
             class="user-component__avatar user-component__avatar__sm"
