--- a/settings.html
+++ b/settings.html
@@ -34,7 +34,9 @@
     </div>
     <header class="settings-header">
       <div class="settings-header-column">
-        <i class="fa-solid fa-angle-left"></i>
+        <a href="more.html">
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
       </div>
       <div class="settings-header-column">
         <span>Settings</span>
