--- a/friends.html
+++ b/friends.html
@@ -116,5 +116,8 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
   </body>
 </html>
