--- a/find.html
+++ b/find.html
@@ -148,14 +148,14 @@
           <a class="nav__link" href="chats.html">
             <span class="new-massage badge">1</span>
             <object
-              data="icons/KakaoTalk_bubble__fill.svg"
+              data="icons/KakaoTalk_bubble.svg"
               type="image/svg+xml"
             ></object>
           </a>
         </li>
         <li class="footer-box__column">
           <a class="nav__link" href="find.html">
-            <object data="icons/search.svg" type="image/svg+xml"></object>
+            <object data="icons/search__fill.svg" type="image/svg+xml"></object>
           </a>
         </li>
         <li class="footer-box__column">
@@ -166,5 +166,8 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
   </body>
 </html>
