--- a/more.html
+++ b/more.html
@@ -156,7 +156,7 @@
           <a class="nav__link" href="chats.html">
             <span class="new-massage badge">1</span>
             <object
-              data="icons/KakaoTalk_bubble__fill.svg"
+              data="icons/KakaoTalk_bubble.svg"
               type="image/svg+xml"
             ></object>
           </a>
@@ -169,10 +169,16 @@
         <li class="footer-box__column">
           <a class="nav__link" href="more.html">
             <div class="reddot"></div>
-            <object data="icons/threeDots.svg" type="image/svg+xml"></object>
+            <object
+              data="icons/threeDots_fill.svg"
+              type="image/svg+xml"
+            ></object>
           </a>
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
   </body>
 </html>
