--- a/chat.html
+++ b/chat.html
@@ -48,7 +48,6 @@
     </header>
     <main class="main-screen main-chat">
       <div class="main-chat__time-stamp">Tuesday, June 30, 2020</div>
-
       <div class="message-row">
         <img src="image/app-icons-31.png" alt="" />
         <div class="message-row__content">
@@ -66,17 +65,22 @@
         </div>
       </div>
     </main>
-    <form class="reply">
-      <div class="reply__column">
-        <i class="fa-solid fa-square-plus"></i>
-      </div>
-      <div class="reply__column">
-        <input type="text" placeholder="Write a message" />
-        <div class="replay__column__icons">
-          <i class="fa-solid fa-face-smile"></i>
-          <i class="fa-solid fa-circle-arrow-up"></i>
+    <div class="reply__container">
+      <form class="reply">
+        <div class="reply__column">
+          <i class="fa-solid fa-square-plus"></i>
         </div>
+        <div class="reply__column">
+          <input type="text" placeholder="Write a message" />
+          <div class="replay__column__icons">
+            <i class="fa-solid fa-face-smile"></i>
+            <i class="fa-solid fa-circle-arrow-up"></i>
+          </div>
+        </div>
+      </form>
+      <div class="keypad">
+        <img src="image/keypad.png" alt="" />
       </div>
-    </form>
+    </div>
   </body>
 </html>
