change names and numbers

--- a/more.html
+++ b/more.html
@@ -56,9 +56,9 @@
           class="user-component__avatar user-component__avatar__xl"
         />
         <div class="user-detail">
-          <span class="user-name">Nicolas</span>
+          <span class="user-name">Brooklinn</span>
           <span class="user-subtitle"
-            >+1 787-493-4219 &nbsp<i class="fa-solid fa-circle-exclamation"></i
+            >+55 11-4223-4523 &nbsp<i class="fa-solid fa-circle-exclamation"></i
           ></span>
         </div>
       </a>
