--- a/friends.html
+++ b/friends.html
@@ -58,8 +58,8 @@
             class="user-component__avatar user-component__avatar__xl"
           />
           <div class="user-detail">
-            <span class="user-name">Nicolas</span>
-            <span class="user-subtitle">+1 787-493-4219</span>
+            <span class="user-name">Brooklinn</span>
+            <span class="user-subtitle">+55 11-4223-4523</span>
           </div>
         </a>
         <div class="user-component__right"></div>
