--- a/chat.html
+++ b/chat.html
@@ -82,5 +82,8 @@
         <img src="image/keypad.png" alt="" />
       </div>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
   </body>
 </html>
