--- a/chats.html
+++ b/chats.html
@@ -98,5 +98,8 @@
     <div id="splash-screen">
       <i class="fa-solid fa-comment"></i>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
   </body>
 </html>
