--- a/find.html
+++ b/find.html
@@ -169,5 +169,8 @@
     <div id="splash-screen">
       <i class="fa-solid fa-comment"></i>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
   </body>
 </html>
