--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account of Password</a>
     </form>
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
   </body>
 </html>
