--- a/more.html
+++ b/more.html
@@ -180,5 +180,8 @@
     <div id="splash-screen">
       <i class="fa-solid fa-comment"></i>
     </div>
+    <div id="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
   </body>
 </html>
